# ATtiny_Template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: main.cpp
